samples/_failures_safe/1761456160_ac8192_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45cbca3c.c: In function ‘main’:
./samples/SAFE/__tmp_45cbca3c.c:150:5: error: expected declaration or statement at end of input
  150 |     for (int i = 0; i < 2048; i++) {
      |     ^~~
./samples/SAFE/__tmp_45cbca3c.c:150:5: error: expected declaration or statement at end of input
